--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-scroll-to-bottom": "^4.2.0",
     "react-simple-image-slider": "^2.4.1",
     "react-slick": "^0.29.0",
     "redux": "^4.2.0",
+    "socket.io-client": "^4.5.1",
     "styled-components": "^5.3.5",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.0"
