--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.1.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
@@ -23,8 +24,8 @@
     "react-simple-image-slider": "^2.4.1",
     "react-slick": "^0.29.0",
     "redux": "^4.2.0",
-    "socket.io-client": "^4.5.1",
     "redux-thunk": "^2.4.1",
+    "socket.io-client": "^4.5.1",
     "styled-components": "^5.3.5",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.0"
