--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "redux-thunk": "^2.4.1",
     "socket.io-client": "^4.5.1",
     "styled-components": "^5.3.5",
+    "sweetalert": "^2.1.2",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.0"
   },
