--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react-scroll-to-bottom": "^4.2.0",
     "react-simple-image-slider": "^2.4.1",
     "react-slick": "^0.29.0",
-    "react-toastify": "^9.0.5",
+    "react-toastify": "8.2.0",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "socket.io-client": "^4.5.1",
