--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "socket.io-client": "^4.5.1",
     "styled-components": "^5.3.5",
     "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.4.23",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.0"
   },
