--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-modal": "^3.15.1",
+    "react-query": "^3.39.2",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
@@ -34,6 +35,8 @@
     "styled-components": "^5.3.5",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.4.23",
+    "swr": "^1.3.0",
+    "trigger": "^1.1.1",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.0"
   },
