--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^2.4.0",
     "react-cookie": "^4.1.1",
     "react-datepicker": "^4.8.0",
+    "react-daum-postcode": "^3.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-js-pagination": "^3.0.3",
