--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-datepicker": "^4.8.0",
     "react-daum-postcode": "^3.1.1",
     "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1",
     "react-hook-form": "^7.33.1",
     "react-icons": "^4.4.0",
     "react-infinite-scroll-component": "^6.1.0",
